# minishell42

./:  школа-дом  .file2.swp  .gitignore  .gitmodules  CMakeLists.txt  FIL  FILELL  FILEYES  HERE  HHHHHH  KKK  Makefile  README.md  abi  f  file1  file10  file2  file3  file7  file8  file88  file9  file99  file9999  fileEchoPipe  fileGG  fileHERE  filr  ileile  main.c  minishell  res  sort_func.c  termcap.h  tmpFile
docs/: mini-anton.txt
get_next_line/: get_next_line.c
libft/: Makefile  bonus.c  bonus.h  ft_arrlen.c  ft_atoi.c  ft_strcspn.c  ft_strsep.c  libft.h
libft/get_next_line/: get_next_line.h  get_next_line_utils.c
libftCer/: Makefile  libft.h
libftCer/get_next_line/: get_next_line.c  gnl_wrap_utils.c
pipex-intra/: bonusParseLastRedirect.c  pipexSplit.c  text1  text2
pipex-intra/libft/: Makefile
readline/8.1/: INSTALL_RECEIPT.json  inputrc
readline/8.1/lib/: libhistory.dylib  libreadline.8.1.dylib
readline/8.1/lib/pkgconfig/: readline.pc
readline/8.1/share/readline/: rl-fgets.c
src/: DRAFT.txt  a.out  checkControlSymbol.c  checkHereDoc.c  closeAllFds.c  create_pipes.c  dollar.c  env_export_unset.c  env_export_unset.h  env_list.c  env_list.h  errors.c  exec.c  execArrSplit.c  execBinary.c  exec_cer.c  exit_codes.h  exportHandler.c  file88  file99  findCommand.c  freeMsh.c  ft_cd.c  ft_echo.c  ft_exit.c  ft_parser.c  ft_pwd.c  getBinaryName.c  getCommandArr.c  getExportVar.c  getTmpFile.c  get_fdIn.c  handlers.c  hasTokens.c  init.c  initFds.c  lama.text  lexer.c  main.c  minishell.c  (+14 more)
src/env/: envExportUnset.h  envParsedLstNew.c
src/enviroment/: envAddNew.c  envDeleteVar.c  envInitEnvpList.c  envList.c  envList.h  envParsedLstNew.c  envPrintLists.c  envSetNameVal.c  envUnset.c  env_export_unset.c  env_export_unset.h  enviroment.c  enviroment.h  environment.h  freeNameVal.c  unset.c
src/environment/: envAddNew.c  envDeleteVar.c  envPrintLists.c  envSetNameVal.c  environment.h
src/here_doc/: bonusClean.c  checkExecArr.c  checkFileFd.c  closeAllFds.c  execArrSplit.c  findCommand.c  findPath.c  getBinaryName.c  getExecArr.c  getHereDocFile.c  getStdin.c  getTmpFile.c  here_doc.c  here_doc.h  mFree.c  pipexSplit.c  printError.c
src/utils/: ft_freeEnList.c  ft_freeStringsArr.c  ft_lstFree.c  move_index.c  msh_utils.h
(+1 files in other folders)
